fixed the resolution of the imgage slideshow

--- a/destinations/domestic/hagiang-lungcu-dongvan.html
+++ b/destinations/domestic/hagiang-lungcu-dongvan.html
@@ -83,13 +83,13 @@
                     <img src="../../img/info/des_banner/hagiang.png" alt="Hạ Long" style="width:100%">
                 </div>
                 <div class="slide fade">
-                    <img src="../../img/info/halong.jpg" alt="Fansipan" style="width:100%">
+                    <img src="../../img/info/des_banner/dalat.png" alt="Fansipan" style="width:100%">
                 </div>
                 <div class="slide fade">
-                    <img src="../../img/info/halong.jpg" alt="Sapa" style="width:100%">
+                    <img src="../../img/info/des_banner/catba.png" alt="Sapa" style="width:100%">
                 </div>
                 <div class="slide fade">
-                    <img src="../../img/info/halong.jpg" alt="Sapa" style="width:100%">
+                    <img src="../../img/info/des_banner/mocchau.png" alt="Sapa" style="width:100%">
                 </div>
                 <!-- Navigation buttons -->
                 <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
