--- a/about.html
+++ b/about.html
@@ -31,7 +31,7 @@
 <body>
   <!-- Header -->
   <header>
-    <div><img class="logo" src="img/logo.svg" alt="logo" /></div>
+    <div><a href="./index.html"><img class="logo" src="./img/logo.svg" alt="logo"/></a></div>
     <div class="menu-toggle" id="menu-toggle">
         <i class="fa fa-bars"></i>
       </div>
