fix data-type HaGiang

--- a/des-domestic.html
+++ b/des-domestic.html
@@ -132,8 +132,8 @@
         </aside>
         <!-- Tour-list -->
         <section class="tour-list" id="tour-list">
-        <!-- Tour Bắc -->
-              <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="vip" data-destination="Hà Giang">
+        <!-- Tour 1 -->
+              <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="budget" data-destination="Hà Giang">
                 <img src="./img/info/des_banner/hagiang.png" alt="Tour Hà Giang">
                 <div class="tour-info">
                   <div>
@@ -249,7 +249,7 @@
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
-              <!-- Tour 1 -->
+              <!-- Tour 4 -->
               <div class="tour-card" data-budget="5to10" data-departure="Hà Nội" data-type="budget" data-destination="Đà Lạt">
                 <img src="./img/info/des_banner/dalat.png" alt="Tour Đà Lạt">
                 <div class="tour-info">
@@ -288,7 +288,7 @@
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
-              <!-- Tour 1 -->
+              <!-- Tour 5 -->
               <div class="tour-card" data-budget="5to10" data-departure="Hà Nội" data-type="budget" data-destination="Cao Bằng">
                 <img src="./img/info/des_banner/caobang.png" alt="Tour Cao Bằng">
                 <div class="tour-info">
@@ -405,7 +405,7 @@
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
-              <!--Tour 9-->
+              <!--Tour 8-->
               <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="budget" data-destination="Yên Bái">
                 <img src="./img/info/des_banner/yenbai.png" alt="Tour Yên Bái">
                 <div class="tour-info">
@@ -444,7 +444,7 @@
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
-              <!--Tour 11-->
+              <!--Tour 9-->
               <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="budget" data-destination="Sapa">
                 <img src="./img/info/des_banner/sapa-laocai.png" alt="Tour Sapa - Lào Cai - Hà Nội - Hạ Long">
                 <div class="tour-info">
@@ -483,7 +483,7 @@
                 </div>
                 <div class="tag"><i class="fa-solid fa-piggy-bank"></i>Tiết kiệm</div>
               </div>
-              <!--Tour 12-->
+              <!--Tour 10-->
               <div class="tour-card" data-budget="under5" data-departure="Hà Nội" data-type="budget" data-destination="Quảng Ninh">
                 <img src="./img/info/des_banner/quangninh.png" alt="Tour Quảng Ninh">
                 <div class="tour-info">
