update reset btn + fix href

--- a/des-domestic.html
+++ b/des-domestic.html
@@ -92,6 +92,7 @@
             <h3>BỘ LỌC TÌM KIẾM</h3>
             <form id="filterForm">
               <label>Ngân sách:</label>
+              <button id="resetFilterBtn">Xóa</button>
               <div class="toggle-buttons" data-group="budget" data-single="true">
                 <div class="toggle-btn" data-value="under5">Dưới 5 triệu</div>
                 <div class="toggle-btn" data-value="5to10">Từ 5 - 10 triệu</div>
@@ -126,7 +127,6 @@
                 <div class="toggle-btn" data-value="budget">Tiết kiệm</div>
                 <div class="toggle-btn" data-value="hotdeal">Giá tốt</div>
               </div>
-
               <button type="submit">Áp dụng</button>
             </form>
         </aside>
