--- a/destinations/sub_overseas/europe.html
+++ b/destinations/sub_overseas/europe.html
@@ -52,7 +52,7 @@
                   <ul>
                     <li><a href="../../destinations/sub_overseas/asian.html">Châu Á</a></li>
                     <li><a href="../../destinations/sub_overseas/europe.html">Châu Âu</a></li>
-                    <li><a href="../../destinations/sub_overseas/america.html">Châu Mỹ</a></li>
+                    <li><a href="../../destinations/sub_overseas/americas.html">Châu Mỹ</a></li>
                   </ul>
                 </div>
               </li>
@@ -90,6 +90,7 @@
             <h3>BỘ LỌC TÌM KIẾM</h3>
             <form id="filterForm">
               <label>Ngân sách:</label>
+              <button id="resetFilterBtn">Xóa</button>
               <div class="toggle-buttons" data-group="budget" data-single="true">
                 <div class="toggle-btn" data-value="under20">Dưới 20 triệu</div>
                 <div class="toggle-btn" data-value="20to50">Từ 20 - 50 triệu</div>
