--- a/destinations/sub_overseas/americas.html
+++ b/destinations/sub_overseas/americas.html
@@ -91,6 +91,7 @@
             <h3>BỘ LỌC TÌM KIẾM</h3>
             <form id="filterForm">
               <label>Ngân sách:</label>
+              <button id="resetFilterBtn">Xóa</button>
               <div class="toggle-buttons" data-group="budget" data-single="true">
                 <div class="toggle-btn" data-value="under20">Dưới 20 triệu</div>
                 <div class="toggle-btn" data-value="20to50">Từ 20 - 50 triệu</div>
